--- a/imgui.ini
+++ b/imgui.ini
@@ -6,3 +6,27 @@ Size=400,400
 Pos=60,60
 Size=107,48
 
+[Window][test]
+Pos=60,60
+Size=46,53
+
+[Window][Top Bar]
+Pos=0,0
+Size=1600,40
+
+[Window][Photos]
+Pos=0,644
+Size=1600,256
+
+[Window][Viewport]
+Pos=0,40
+Size=1280,604
+
+[Window][Image Settings]
+Pos=1280,40
+Size=320,604
+
+[Window][File window]
+Pos=4,32
+Size=84,32
+
