Update editor UI so its not ugly as

--- a/imgui.ini
+++ b/imgui.ini
@@ -20,11 +20,11 @@ Size=1600,256
 
 [Window][Viewport]
 Pos=0,40
-Size=1100,604
+Size=1250,604
 
 [Window][Image Settings]
-Pos=1100,40
-Size=500,604
+Pos=1250,40
+Size=350,604
 
 [Window][File window]
 Pos=4,32
@@ -33,4 +33,20 @@ Size=84,32
 [Window][Gallery]
 Pos=0,644
 Size=1600,256
+
+[Window][Dear ImGui Demo]
+Pos=333,124
+Size=550,680
+
+[Window][Dear ImGui Demo/ResizableChild_D5443E47]
+IsChild=1
+Size=504,160
+
+[Window][Dear ImGui Demo/Red_1D4E05CE]
+IsChild=1
+Size=200,100
+
+[Window][Stacked 1]
+Pos=511,333
+Size=385,195
 
