--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ Debug/
 imgui.dir/
 nfd.dir/
 SableImageEditor.dir/
-dependencies/
 x64/
 x86/
 
@@ -27,3 +26,4 @@ SableImageEditor
 
 # Git
 .git/
+.vscode/
