--- a/.gitmodules
+++ b/.gitmodules
@@ -1,23 +1,19 @@
-[submodule "glm"]
-    path = dependencies/glm
-    url = https://github.com/g-truc/glm.git
-
-[submodule "glfw"]
-    path = dependencies/glfw
-    url = https://github.com/glfw/glfw.git
-
-[submodule "glew"]
-    path = dependencies/glew
-    url = https://github.com/Perlmint/glew-cmake.git
-
-[submodule "imgui"]
-    path = dependencies/imgui
-    url = https://github.com/ocornut/imgui.git
-
-[submodule "stb"]
-    path = dependencies/stb
-    url = https://github.com/nothings/stb.git
-
-[submodule "imgui-file-dialog"]
+[submodule "dependencies/imgui"]
+	path = dependencies/imgui
+	url = https://github.com/ocornut/imgui.git
+	branch = docking
+[submodule "dependencies/glm"]
+	path = dependencies/glm
+	url = https://github.com/g-truc/glm.git
+[submodule "dependencies/glfw"]
+	path = dependencies/glfw
+	url = https://github.com/glfw/glfw.git
+[submodule "dependencies/glew"]
+	path = dependencies/glew
+	url = https://github.com/Perlmint/glew-cmake.git
+[submodule "dependencies/stb"]
+	path = dependencies/stb
+	url = https://github.com/nothings/stb.git
+[submodule "dependencies/imgui-file-dialog"]
 	path = dependencies/imgui-file-dialog
-	url = https://github.com/aiekick/ImGuiFileDialog
+	url = https://github.com/aiekick/ImGuiFileDialog.git
